crates/spelldawn/tests/it/rules/snapshots/it__rules__action_tests__activate_ability.snap
---
source: crates/spelldawn/tests/it/rules/action_tests.rs
assertion_line: 294
expression: "Summary::run(&response)"
---

command_list: 
    UpdateGameView: 
        user: 
            side: Champion
            mana: 5
            action_tracker: 1
        current_priority: User
        raid_active: false
channel_response: 
    CreateOrUpdateCard: 
        card: 
            card_id: C45[1]
            revealed_to_viewer: true
            is_face_up: false
            owning_player: Opponent
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Use Test Activated Ability Take 1 Mana"
                rules_text: "<RulesText>"
                targeting: 
                    can_play: false
                on_release_position: 
                    sorting_key: 2
                    position: ObjectPositionIntoCard { card_id: Some(CardIdentifier { side: Champion, index: 45, ability_id: None }) }
        create_position: 
            sorting_key: 2
            position: ObjectPositionStaging
        create_animation: FromParentCard
    Delay: 1000
    MoveGameObjects: 
        id: C45[1]
        position: 
            sorting_key: 0
            position: ObjectPositionIntoCard { card_id: Some(CardIdentifier { side: Champion, index: 45, ability_id: None }) }
    DestroyCard: 
        card_id: C45[1]
    UpdateGameView: 
        opponent: 
            side: Champion
            mana: 5
            action_tracker: 1
        current_priority: Opponent
        raid_active: false
