crates/spelldawn/tests/it/rules/snapshots/it__rules__action_tests__gain_mana.snap
---
source: crates/spelldawn/tests/it/rules/action_tests.rs
assertion_line: 196
expression: response

---
Ok(
    GameResponse {
        command_list: CommandList {
            commands: [
                GameCommand {
                    command: Some(
                        UpdateGameView(
                            UpdateGameViewCommand {
                                game: Some(
                                    GameView {
                                        game_id: Some(
                                            GameIdentifier {
                                                value: 12,
                                            },
                                        ),
                                        user: Some(
                                            PlayerView {
                                                player_info: None,
                                                score: None,
                                                mana: Some(
                                                    ManaView {
                                                        amount: 6,
                                                    },
                                                ),
                                                action_tracker: Some(
                                                    ActionTrackerView {
                                                        available_action_count: 2,
                                                    },
                                                ),
                                            },
                                        ),
                                        opponent: None,
                                        arena: None,
                                        current_priority: User,
                                    },
                                ),
                            },
                        ),
                    ),
                },
            ],
        },
        channel_response: Some(
            (
                13,
                CommandList {
                    commands: [
                        GameCommand {
                            command: Some(
                                UpdateGameView(
                                    UpdateGameViewCommand {
                                        game: Some(
                                            GameView {
                                                game_id: Some(
                                                    GameIdentifier {
                                                        value: 12,
                                                    },
                                                ),
                                                user: None,
                                                opponent: Some(
                                                    PlayerView {
                                                        player_info: None,
                                                        score: None,
                                                        mana: Some(
                                                            ManaView {
                                                                amount: 6,
                                                            },
                                                        ),
                                                        action_tracker: Some(
                                                            ActionTrackerView {
                                                                available_action_count: 2,
                                                            },
                                                        ),
                                                    },
                                                ),
                                                arena: None,
                                                current_priority: Opponent,
                                            },
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
        ),
    },
)
