crates/spelldawn/tests/it/rules/snapshots/it__rules__action_tests__overlord_win_game.snap
---
source: crates/spelldawn/tests/it/rules/action_tests.rs
assertion_line: 251
expression: "Summary::run(&response)"

---

command_list: 
    SetMusic: 
        music_state: Silent
    PlaySound: 
        sound: "<AudioClipAddress>"
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 3
            position: ObjectPositionScoreAnimation
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O45
        duration: 700
        sound: "<AudioClipAddress>"
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O45
        duration: 300
        sound: "<AudioClipAddress>"
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 3
            position: ObjectPositionIdentity { owner: User }
    MoveGameObjects: 
        id: Identity(User)
        position: 
            sorting_key: 0
            position: ObjectPositionIdentityContainer { owner: User }
    UpdateGameView: 
        user: 
            side: Overlord
            mana: 7
            action_tracker: 1
            score: 7
        current_priority: Unspecified
        raid_active: false
    DisplayGameMessage: Victory
channel_response: 
    VisitRoom: 
        initiator: Opponent
        room_id: RoomA
        visit_type: LevelUpRoom
    Delay: 500
    CreateOrUpdateCard: 
        card: 
            card_id: O45
            revealed_to_viewer: true
            revealed_to_opponent: true
            card_icons: 
                arena_icon: "3"
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Scheme 31"
                rules_text: "<RulesText>"
                targeting: "PickRoom"
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionRoom { room_id: Unspecified, room_location: Back }
                can_play: false
        create_position: 
            sorting_key: 3
            position: ObjectPositionIdentity { owner: Opponent }
        create_animation: Unspecified
    SetMusic: 
        music_state: Silent
    PlaySound: 
        sound: "<AudioClipAddress>"
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 3
            position: ObjectPositionScoreAnimation
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O45
        duration: 700
        sound: "<AudioClipAddress>"
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O45
        duration: 300
        sound: "<AudioClipAddress>"
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 3
            position: ObjectPositionIdentity { owner: Opponent }
    MoveGameObjects: 
        id: Identity(Opponent)
        position: 
            sorting_key: 0
            position: ObjectPositionIdentityContainer { owner: Opponent }
    UpdateGameView: 
        opponent: 
            side: Overlord
            mana: 7
            action_tracker: 1
            score: 7
        current_priority: Unspecified
        raid_active: false
    Delay: 1500
    DisplayGameMessage: Defeat
