crates/spelldawn/tests/it/rules/snapshots/it__rules__action_tests__play_card.snap
---
source: crates/spelldawn/tests/it/rules/action_tests.rs
assertion_line: 122
expression: "Summary::run(&response)"

---

command_list: 
    UpdateGameView: 
        user: 
            side: Champion
            mana: 9
            action_tracker: 2
        current_priority: User
        raid_active: false
    CreateOrUpdateCard: 
        card: 
            card_id: CardIdentifier { side: Champion, index: 1 }
            owning_player: User
            revealed_card: 
                revealed_in_arena: true
                can_play: false
        create_position: 
            sorting_key: 2
            position: ObjectPositionDiscardPile { owner: User }
        create_animation: Unspecified
    MoveGameObjects: 
        id: CardIdentifier { side: Champion, index: 1 }
        position: 
            sorting_key: 2
            position: ObjectPositionDiscardPile { owner: User }
channel_response: 
    UpdateGameView: 
        opponent: 
            side: Champion
            mana: 9
            action_tracker: 2
        current_priority: Opponent
        raid_active: false
    CreateOrUpdateCard: 
        card: 
            card_id: CardIdentifier { side: Champion, index: 1 }
            card_icons: 
                top_left_icon: "5"
            owning_player: Opponent
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "<CardTitle>"
                rules_text: "<RulesText>"
                revealed_in_arena: true
                targeting: 
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionStaging
                can_play: false
        create_position: 
            sorting_key: 2
            position: ObjectPositionDiscardPile { owner: Opponent }
        create_animation: Unspecified
    MoveGameObjects: 
        id: CardIdentifier { side: Champion, index: 1 }
        position: 
            sorting_key: 0
            position: ObjectPositionStaging
    Delay: 1500
    MoveGameObjects: 
        id: CardIdentifier { side: Champion, index: 1 }
        position: 
            sorting_key: 2
            position: ObjectPositionDiscardPile { owner: Opponent }
