crates/spelldawn/tests/it/rules/snapshots/it__rules__action_tests__play_hidden_card.snap
---
source: crates/spelldawn/tests/it/rules/action_tests.rs
assertion_line: 151
expression: "Summary::run(&response)"

---

command_list: 
    UpdateGameView: 
        user: 
            side: Overlord
            action_tracker: 2
        current_priority: User
        raid_active: false
    CreateOrUpdateCard: 
        card: 
            card_id: CardIdentifier { side: Overlord, index: 1 }
            owning_player: User
            revealed_card: 
                revealed_in_arena: false
                can_play: false
        create_position: 
            sorting_key: 2
            position: ObjectPositionRoom { room_id: RoomA, room_location: Back }
        create_animation: Unspecified
    MoveGameObjects: 
        id: CardIdentifier { side: Overlord, index: 1 }
        position: 
            sorting_key: 2
            position: ObjectPositionRoom { room_id: RoomA, room_location: Back }
channel_response: 
    UpdateGameView: 
        opponent: 
            side: Overlord
            action_tracker: 2
        current_priority: Opponent
        raid_active: false
    MoveGameObjects: 
        id: CardIdentifier { side: Overlord, index: 1 }
        position: 
            sorting_key: 2
            position: ObjectPositionRoom { room_id: RoomA, room_location: Back }
